# xi-gtk

./: .editorconfig  .travis.yml  Application.vala  CoreConnection.vala  EditView.vala  Line.vala  LinesCache.vala  Makefile  Notebook.vala  README.md  Style.vala  StyleMap.vala  TabLabel.vala  Utilities.vala  Window.vala  com.github.eyelash.xi-gtk.desktop  com.github.eyelash.xi-gtk.json  com.github.eyelash.xi-gtk.service.in  config.vapi  flatpak.json  meson.build
.github/workflows/: ci.yml
resources/: bindings.css  gresource.xml  key-bindings.css  style.css
resources/gtk/: menus.ui
src/: Application.vala  Blinker.vala  CoreConnection.vala  EditView.vala  EditViewContainer.vala  FindBar.vala  Line.vala  LineCache.vala  Notebook.vala  StyleMap.vala  Theme.vala  Utilities.vala  Window.vala
xi-core-git/: PKGBUILD
xi-gtk-git/: PKGBUILD
